--- a/main.css
+++ b/main.css
@@ -1,8 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body {
   width: 100%;
   height: 100%;
   background: pink;
+}
+
+img {
+  border: 0;
+  vertical-align: top;
 }
 
 .bodytest {
